--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -3,4 +3,10 @@
   padding: 0.5em;
   font-size: 2em;
   border: 2px solid black;
+  cursor: pointer;
+  transition: all 0.3s;
+
+  &:hover {
+    background-color: yellowgreen;
+  }
 }
