--- a/src/components/Movies/Movies.module.scss
+++ b/src/components/Movies/Movies.module.scss
@@ -1,6 +1,67 @@
 .movies {
-  margin: 1em;
-  padding: 0.5em;
-  font-size: 2em;
-  border: 2px solid black;
+  &__container {
+    display: flex;
+    width: 100%;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+  }
+
+  &__title {
+    box-sizing: border-box;
+    font-size: 24px;
+    margin: 1em 0;
+    padding: 1em;
+    font-size: 2em;
+    width: 100%;
+    text-align: center;
+    background-color: aliceblue;
+  }
+
+  &__list {
+    display: flex;
+    width: 100%;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    row-gap: 20px;
+    padding: 5px;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    width: 100%;
+  }
+}
+
+.movie {
+  &__card {
+    background-color: #ddd;
+    border: 1px solid #aaa;
+    border-radius: 5px;
+    padding: 10px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+
+    max-width: 380px;
+    display: flex;
+    flex-direction: column;
+    cursor: pointer;
+
+    &:hover {
+      filter: brightness(1.1);
+    }
+  }
+
+  &__image {
+    max-width: 100%;
+    aspect-ratio: 4 / 5;
+    border-radius: 5px;
+  }
+
+  &__title {
+    font-size: 18px;
+    margin: 5px 0;
+  }
+
+  &__description {
+    font-size: 12px;
+  }
 }
