--- a/src/components/Movies/Movies.module.scss
+++ b/src/components/Movies/Movies.module.scss
@@ -23,7 +23,7 @@
     width: 100%;
     flex-wrap: wrap;
     justify-content: space-evenly;
-    row-gap: 20px;
+    gap: 20px;
     padding: 5px;
     list-style: none;
     padding: 0;
