--- a/src/components/ErrorBoundary/ErrorBoundary.module.scss
+++ b/src/components/ErrorBoundary/ErrorBoundary.module.scss
@@ -4,5 +4,7 @@
   align-items: center;
   justify-content: center;
   min-height: calc(100vh - 16px);
+  padding: 0.2em;
+  text-align: center;
   background-color: bisque;
 }
