--- a/src/components/Message/Message.module.scss
+++ b/src/components/Message/Message.module.scss
@@ -3,6 +3,7 @@
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 73vh;
+  height: 72vh;
+  padding: 0.2em;
   font-size: 1.4em;
 }
