--- a/src/components/MovieCard/MovieCard.module.scss
+++ b/src/components/MovieCard/MovieCard.module.scss
@@ -6,7 +6,7 @@
     padding: 10px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 
-    max-width: 380px;
+    max-width: 320px;
     display: flex;
     flex-direction: column;
     cursor: pointer;
@@ -17,8 +17,8 @@
   }
 
   &__image {
-    width: 100%;
-    aspect-ratio: 4 / 5;
+    width: 320px;
+    height: 400px;
     border-radius: 5px;
   }
 
