--- a/src/components/SearchInput/SearchInput.module.scss
+++ b/src/components/SearchInput/SearchInput.module.scss
@@ -4,3 +4,12 @@
   font-size: 2em;
   border: 2px solid black;
 }
+
+@media (max-width: 500px) {
+  .search {
+    width: 90%;
+    margin: 0.4em auto;
+    padding: 0.2em;
+    font-size: 1.5em;
+  }
+}
