--- a/src/components/BeerCard/BeerCard.module.scss
+++ b/src/components/BeerCard/BeerCard.module.scss
@@ -1,4 +1,4 @@
-.movie {
+.beer {
   &__card {
     background-color: #ddd;
     border: 1px solid #aaa;
@@ -6,9 +6,10 @@
     padding: 10px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 
-    max-width: 320px;
+    width: 200px;
     display: flex;
     flex-direction: column;
+    align-items: center;
     cursor: pointer;
 
     &:hover {
@@ -16,15 +17,24 @@
     }
   }
 
+  &__image-container {
+    position: relative;
+    width: 100px;
+    height: 200px;
+  }
   &__image {
-    width: 320px;
-    height: 400px;
-    border-radius: 5px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
   }
 
   &__title {
     font-size: 18px;
     margin: 5px 0;
+    text-align: center;
   }
 
   &__description {
