--- a/src/components/Beers/Beers.module.scss
+++ b/src/components/Beers/Beers.module.scss
@@ -3,6 +3,7 @@
     display: flex;
     width: 100%;
     flex-wrap: wrap;
+    flex: 1;
     justify-content: center;
     align-items: center;
   }
