--- a/src/components/BeerBottle/BeerBottle.module.scss
+++ b/src/components/BeerBottle/BeerBottle.module.scss
@@ -7,6 +7,7 @@
   width: 30%;
   height: 72vh;
   padding: 20px;
+  margin-right: 2em;
   font-size: 1.4em;
   border-radius: 10px;
   background-color: wheat;
