test: NotFound component

--- a/src/components/NotFound/NotFound.module.scss
+++ b/src/components/NotFound/NotFound.module.scss
@@ -13,6 +13,11 @@
   }
 
   &__link {
-    text-decoration: none;
+    padding: 4px;
+
+    cursor: pointer;
+    &:hover {
+      background-color: rgb(72, 226, 175);
+    }
   }
 }
